--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,19 @@
 
 # Setuptools distribution folder.
 /dist/
+/build/
+
 
 # Python egg metadata, regenerated from source files by setuptools.
 /*.egg-info
 /*.egg
 
 # other
+files.txt
+tox.ini
 *.npy
 *.spec
 .tox
 .idea
+/time_trials/*.txt
+/time_trials/data
