--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,11 @@
 /*.egg
 
 # other
-files.txt
 tox.ini
 *.npy
 *.spec
+*.txt
 .tox
 .idea
-/time_trials/*.txt
-/time_trials/data
+/time_trials/best_time_data
+/time_trials/i_v_timetrials_data
