--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 
 script:
 
-  - coverage run --source=dicetables setup.py test
+  - coverage run -a --source=dicetables setup.py test
   - coverage report -m
   # Run the doctests
   - python doctests.py
