--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps =
     coverage
 
 commands =
-    coverage run -m unittest discover
+    coverage run -a -m unittest discover
 
     python doctests.py
 
