removed useless class

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,14 @@
 [tox]
-envlist = py27,py37,py36
+envlist = py38,py37,py36
 
 [testenv]
 deps =
     coverage
+    pytest
 
 commands =
-    coverage run -a -m unittest discover
+    coverage run -m pytest
 
     python doctests.py
 
     coverage report -m
-
-
-
