--- a/.coveragerc
+++ b/.coveragerc
@@ -9,3 +9,12 @@ omit =
     time_trials/*
     doctests.py
 
+[report]
+# Regexes for lines to exclude from consideration
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise AssertionError
+    raise NotImplementedError
