--- a/.github/workflows/pr-test.yaml
+++ b/.github/workflows/pr-test.yaml
@@ -27,5 +27,7 @@ jobs:
         python -m pip install pytest pytest-cov
     - name: Test with pytest
       run: |
-        pytest . --junitxml=junit/test-results.xml --cov=dicetables --cov-report=xml --cov-report=html
+        pytest . --cov=dicetables  --cov-report=xml
         python doctests.py
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
