try posting to pypi. expect failure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "dicetables"
-version = "4.0.2"
+version = "4.0.2.post2"
 dependencies = []
 requires-python = ">=3.7"
 authors = [
