--- a/.github/workflows/release-jobs.yaml
+++ b/.github/workflows/release-jobs.yaml
@@ -25,6 +25,7 @@ jobs:
   pypi-publish:
     name: Upload release to PyPI
     runs-on: ubuntu-latest
+    needs: [release-build]
     environment:
       name: testpypi
       url: https://test.pypi.org/p/dicetables
