--- a/.github/workflows/pre-release-jobs.yaml
+++ b/.github/workflows/pre-release-jobs.yaml
@@ -1,7 +1,7 @@
-name: Upload Python Package
+name: Upload Test Python Package
 on:
   release:
-    types: [released]
+    types: [prereleased]
 permissions:
   contents: read
 jobs:
@@ -23,12 +23,12 @@ jobs:
           name: release-dists
           path: dist/
   pypi-publish:
-    name: Upload release to PyPI
+    name: Upload release to Test PyPI
     runs-on: ubuntu-latest
     needs: [release-build]
     environment:
-      name: pypi
-      url: https://pypi.org/p/dicetables
+      name: testpypi
+      url: https://test.pypi.org/p/dicetables
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
@@ -39,3 +39,5 @@ jobs:
           path: dist/
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          repository-url: https://test.pypi.org/legacy/
