--- a/.github/workflows/pre-release-jobs.yaml
+++ b/.github/workflows/pre-release-jobs.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [release-build]
     environment:
-      name: testpypi
+      name: pre-release-pypi
       url: https://test.pypi.org/p/dicetables
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
