--- a/.github/workflows/release-jobs.yaml
+++ b/.github/workflows/release-jobs.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [release-build]
     environment:
-      name: pypi
+      name: release-pypi
       url: https://pypi.org/p/dicetables
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
