--- a/.github/workflows/pre-release-jobs.yaml
+++ b/.github/workflows/pre-release-jobs.yaml
@@ -30,7 +30,7 @@ jobs:
       name: pre-release-pypi
       url: https://test.pypi.org/p/dicetables
     permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     steps:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
